--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "generate-types": "openapi-ts",
     "e2e": "npx playwright test",
     "e2e:ui": "npx playwright test --ui",
-    "scaffold": "./scaffold.sh",
+    "scaffold": "bash scaffold.sh",
     "storybook": "ng run angular-starter:storybook",
     "build-storybook": "ng run angular-starter:build-storybook"
   },
